--- a/src/styles/ModalProfile4.css
+++ b/src/styles/ModalProfile4.css
@@ -73,9 +73,61 @@
     font-family: 'Lato', sans-serif;
 }
 
+.listaBeneficiarios, .box{
+    display: flex;
+    width: 95%;
+    font-family: 'Lato', sans-serif;
+    font-size: 1.2rem;
+    padding: 0 1rem;
+    border-radius: 1rem;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.box label{
+    display: flex;
+    align-items: center;
+}
+
+.listaBeneficiarios{
+    flex-direction: column;
+}
+
+.box h5{
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-left: 2rem;
+    background-color: rgb(0, 149, 149);
+    padding: 0 1rem;
+    border-radius: 1rem;
+}
+
+#cruz{
+    background-color: rgb(119, 119, 119);
+    padding: 0.5rem 1rem;
+    border-radius: 3rem;
+    cursor: pointer;
+    transition: .5s ease;
+    margin-left: 2rem;
+}
+
+#cruz:hover{
+    background-color: rgb(255, 68, 0);
+
+}
+
+.box{
+    height: 4rem;
+    background-color: rgb(79, 79, 79);
+    margin-bottom: 1rem;
+}
+
+
+
 @media (max-width : 767px) {
     #scrolleable4 {
         padding-left: 1rem;
+        overflow-y: scroll;
     }
 
     #x {
