--- a/src/styles/perfil.css
+++ b/src/styles/perfil.css
@@ -156,7 +156,7 @@
     background-color: rgb(52, 52, 52);
     border-radius: 3rem;
     padding: 1rem;
-    width: 100%;
+    width: 95%;
 }
 
 .caja {
@@ -623,9 +623,13 @@
     .form2 p {
         width: 19rem;
         padding-left: 1rem;
-        margin-left: 1rem;
+        margin-left: 0rem;
         overflow: auto;
 
+    }
+
+    .form1 h2, .form1 p{
+        margin-left: 1rem;
     }
 
     .form1 h2 {
@@ -669,7 +673,7 @@
         flex-direction: column;
         flex-wrap: nowrap;
         flex: 0;
-        width: 100%;
+        width: 90%;
     }
 
     .containerperfil2{
@@ -741,8 +745,8 @@
     }
 
     .texxt p {
-        max-width: 20rem;
-        margin-left: 0;
+        max-width: 15rem;
+        margin-left:1rem;
     }
 
     #perfilh11 {
@@ -877,7 +881,8 @@
     }
 
     #wallet {
-        width: 100%;
+        width: 80%;
+        overflow-y: auto;
         margin-left: 0rem;
     }
 
@@ -1021,8 +1026,9 @@
     }
 
     #btn-adicional {
-        margin-left: 10rem;
+        margin-left: 0rem;
         margin-bottom: 10rem;
+        margin-top: 3rem;
     }
 
     .containerfechas {
@@ -1065,11 +1071,21 @@
     #cajafecha{
         width: 75%;
     }
+
+    #botonadquirirmodal{
+        width: max-content;
+        font-size: 2rem;
+
+    }
 }
 
 
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
+
+    #cajafecha{
+        width: 90%;
+    }
 
     
     .containerperfil2{
@@ -1175,7 +1191,8 @@
     }
 
     #wallet {
-        width: 100%;
+        width: 90%;
+        overflow-y: auto;
         margin-left: 0rem;
     }
 
@@ -1293,9 +1310,7 @@
 
     }
 
-    #cuotas {
-        width: 100%;
-    }
+   
 
    
 
@@ -1320,8 +1335,8 @@
     }
 
     #btn-adicional {
-        margin-left: 10rem;
         margin-bottom: 10rem;
+        margin-top: 3rem;
     }
 
     .containerfechas {
