--- a/src/styles/ModalProfile5.css
+++ b/src/styles/ModalProfile5.css
@@ -95,6 +95,24 @@
     margin-bottom: 2rem;
 }
 
+.cont21 h2{
+    font-family: 'Lato', sans-serif;
+    font-weight:900;
+    font-size:2rem;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 1rem;
+    margin-top: 0.5rem;
+    color: white;
+}
+
+.cont21{
+    background-color: rgb(129, 129, 129);
+    padding: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 1rem;
+}
+
 
 @media (max-width: 767px) {
 
