--- a/src/styles/Verificacion.css
+++ b/src/styles/Verificacion.css
@@ -3,6 +3,17 @@
     display: flex;
 }
 
+.error{
+    padding: 1rem;
+    background-color: rgb(254, 83, 83);
+    color: white;
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+    font-size: 1rem;
+    width: 100%;
+    text-align: center;
+}
+
 
 
 .textverif h1 {
