--- a/src/styles/ModalProfile4.css
+++ b/src/styles/ModalProfile4.css
@@ -3,6 +3,15 @@
     flex: 1;
 }
 
+.errorbenef{
+    font-size: 1rem;
+    font-weight: 700;
+    margin-top: 5rem;
+    background-color: rgb(252, 107, 107);
+    padding: 1rem;
+    border-radius: 1rem;
+}
+
 .caja4 p {
     font-size: 1.2rem;
     margin-bottom: .8rem;
@@ -15,11 +24,28 @@
     padding: .5rem 0 .5rem 0;
     padding-left: 1rem;
 }
-
 #scrolleable4 {
-    width: 40%;
-}
-
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+  
+  #scrolleable4::-webkit-scrollbar {
+    width: 5px; 
+  }
+  
+  #scrolleable4::-webkit-scrollbar-thumb {
+    background-color: #3498db; 
+    border-radius: 5px; 
+  }
+  
+  #scrolleable4::-webkit-scrollbar-track {
+    background-color: #f1f1f1; 
+  }
+  
+  #scrolleable4::-webkit-scrollbar-button {
+    display: none;
+  }
+  
 
 .continuar5 button {
     background: none;
@@ -43,6 +69,8 @@
     display: flex;
     flex-wrap: wrap;
     font-family: 'Lato';
+    justify-content: center;
+    align-items: center;
 }
 
 #beneficiario {
@@ -50,6 +78,7 @@
     padding-left: 1rem;
     border-radius: 1rem;
     cursor: pointer;
+    font-size: 1.5rem !important;
 }
 
 #db {
@@ -60,7 +89,6 @@
 }
 
 .continuar5 {
-    margin-left: 13rem;
     font-size: 2rem;
     font-family: 'Lato', sans-serif;
     font-weight: 700;
@@ -73,7 +101,8 @@
     font-family: 'Lato', sans-serif;
 }
 
-.listaBeneficiarios, .box{
+.listaBeneficiarios,
+.box {
     display: flex;
     width: 95%;
     font-family: 'Lato', sans-serif;
@@ -84,16 +113,16 @@
     justify-content: space-between;
 }
 
-.box label{
+.box label {
     display: flex;
     align-items: center;
 }
 
-.listaBeneficiarios{
+.listaBeneficiarios {
     flex-direction: column;
 }
 
-.box h5{
+.box h5 {
     font-size: 1.5rem;
     font-weight: 700;
     margin-left: 2rem;
@@ -102,7 +131,7 @@
     border-radius: 1rem;
 }
 
-#cruz{
+#cruz {
     background-color: rgb(119, 119, 119);
     padding: 0.5rem 1rem;
     border-radius: 3rem;
@@ -111,15 +140,24 @@
     margin-left: 2rem;
 }
 
-#cruz:hover{
+#cruz:hover {
     background-color: rgb(255, 68, 0);
 
 }
 
-.box{
-    height: 4rem;
+.box {
     background-color: rgb(79, 79, 79);
     margin-bottom: 1rem;
+}
+
+.hide {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+#continuar {
+    margin-left: 0;
 }
 
 
@@ -156,8 +194,13 @@
 
     .continuar5 {
         margin-left: 0;
-        position: relative;
-        right: 1rem;
+    }
+    .box{
+        flex-direction: column;
+    }
+    #cruz{
+        margin: 0;
+        margin-bottom: 1rem;
     }
 }
 
@@ -190,12 +233,11 @@
         margin-bottom: 0;
     }
 
-    .continuar5 {
-        margin-left: 0rem;
-    }
+    
+
 }
 
-@media (min-width: 991px) and (max-width: 1199px){
+@media (min-width: 991px) and (max-width: 1199px) {
     #scrolleable4 {
         padding-left: 1rem;
     }
@@ -224,10 +266,7 @@
         margin-bottom: 0;
     }
 
-    .continuar5 {
-        margin-left: 2.5rem;
-    }
-} 
+}
 
 @media (min-width: 1200px) and (max-width: 1599px) {
     .caja4 input {
@@ -243,7 +282,6 @@
     }
 
     .continuar5 {
-        margin-left: 6rem;
         font-size: 2rem;
         font-family: 'Lato', sans-serif;
         font-weight: 700;
@@ -265,7 +303,6 @@
     }
 
     .continuar5 {
-        margin-left: 9rem;
         font-size: 2rem;
         font-family: 'Lato', sans-serif;
         font-weight: 700;
