--- a/src/styles/perfil.css
+++ b/src/styles/perfil.css
@@ -32,6 +32,18 @@
     margin-bottom: 0;
 }
 
+.formulario2 h5{
+    color: white;
+    font-family: 'Lato', sans-serif;
+    font-size: 1.5rem;
+    text-align: center;
+    background-color: rgb(15, 98, 0);
+    padding: 1rem 0;
+    border-radius: 1rem;
+    cursor: pointer;
+    font-weight: 700;
+}
+
 .formulario2 h2 {
     font-size: 1.5rem;
     font-family: 'Lato', sans-serif;
@@ -49,8 +61,8 @@
     font-family: 'Lato', sans-serif;
     color: white;
     background-color: rgb(1, 80, 123);
-    width: 100%;
-    padding: 2.5rem 0;
+    width: 80%;
+    padding: 2rem 0;
     border-radius: 1rem;
     cursor: pointer;
     margin-bottom: 0;
@@ -88,6 +100,7 @@
     justify-content: center;
     align-items: center;
 }
+
 
 @media(max-width: 768px){
     .formulario2{
