--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -117,6 +117,12 @@ img {
     height: 2rem;
 }
 
+#phoneinput{
+    font-size: 2rem;
+}
+
+
+
 @media only screen and (max-width: 767px) {
     .imageblog {
         display: none;
