--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,32 +1,15 @@
 .logincontainer {
-    background-image: url('../assets/fondoblanco.webp');
-    background-repeat: round;
+    font-family: 'Lato';
+    box-sizing: border-box;
+    flex-direction: column;
+}
+
+.containergeneral {
     display: flex;
-    margin-top: 3rem;
-}
-
-.logincontainer img {
-    width: 40%;
-    margin-left: 5%;
-}
-
-.errorLogin{
-    font-size: 1rem;
-    text-align: center;
-    margin-top: 1rem;
-    background-color: rgb(254, 84, 46);
-    border-radius: 1rem;
-}
-
-.formlogin {
-    margin-left: 10%;
-    margin-top: 5rem;
-    background-color: rgb(52, 52, 52);
-    height: fit-content;
-    padding: 2rem;
-    border-radius: 2rem;
-    color: white;
-    font-family: 'Lato', sans-serif;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-top: 15vh;
 }
 
 .formlogin form {
@@ -34,187 +17,131 @@
     flex-direction: column;
 }
 
-.formlogin h1 {
-    font-size: 4rem;
+
+.logincontainer h1 {
     font-weight: 700;
-    margin-bottom: 1.5rem;
+    font-size: 2rem;
+    margin-bottom: 0;
+}
+
+.logincontainer p {
+    margin-top: 10px;
+    font-size: 1.2rem;
+    color: rgb(112, 112, 112);
+}
+
+.formlogin {
+    margin-top: 2rem;
 }
 
 .formlogin input {
-    background-color: white;
-    color: rgb(0, 0, 0);
-    padding: 1.6rem;
-    border-radius: 1rem;
-    margin-bottom: 1rem;
+    font-size: 1.2rem;
     outline: none;
-    font-size: 1.5rem;
+    padding: 0.7rem 0.5rem;
+    width: 100%;
+    margin-bottom: 1rem;
+    border-radius: 10px;
+    border: solid 1px rgb(232, 232, 232);
+    background-color: rgba(243, 247, 253, 0.597);
+    color: rgb(112, 112, 112);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+
 }
 
 .formlogin input::placeholder {
-    font-size: 1.5rem;
-    margin-top: 1rem;
+    color: rgb(185, 185, 185);
+}
+
+.formlogin form input[type="checkbox"] {
+    width: fit-content;
+    margin-right: 0.4rem;
+    margin-bottom: 0;
 }
 
 .formlogin label {
-    font-size: 1.3rem;
-    margin-bottom: 1rem;
+    color: rgb(130, 130, 130);
 }
 
-#forgot {
-    font-size: 1.2rem;
-    color: rgb(0, 0, 164);
-    background-color: white;
-    padding: 0.5rem 1rem 0.5rem 1rem;
-    margin-left: 5rem;
-    width: fit-content;
-    margin-top: 2rem;
-    border-radius: 1rem;
-}
 
 .formlogin button {
-    font-family: 'Monserrat', sans-serif;
-    font-weight: 700;
-    font-size: 3rem;
+    border: none;
+    background-color: rgb(66, 66, 252);
     color: white;
-    text-align: center;
-    background: linear-gradient(to right, rgb(26, 191, 219), rgb(2, 80, 116));
-    border-radius: .6rem;
-    border-style: none;
+    font-size: 1rem;
+    padding: 0.8rem 0;
+    border-radius: 0.4rem;
+    margin-top: 2rem;
     cursor: pointer;
 }
 
 .afiliar {
-    font-size: 1.2rem;
-    text-align: center;
+    margin-top: 1rem;
+    background-color: rgb(71, 71, 253);
+    width: fit-content;
+    padding: 0.5rem;
     color: white;
+    border-radius: 0.5rem;
+    font-weight: 700;
+    margin-bottom: 5rem;
+}
+
+.tokens button {
+    font-size: 1rem;
+    border: 2px solid rgb(233, 237, 251);
+    border-radius: 0.5rem;
+    padding: 0.7rem 3rem;
+    background: none;
+    margin-right: 1rem;
+    font-weight: 500;
+}
+
+.errorLogin {
+    text-align: center;
+    margin-top: 1rem;
+    background-color: orange;
+    border-radius: 0.5rem;
+    color: white;
+    font-weight: 700;
+}
+
+
+
+#slogan {
+    font-weight: 900;
+    font-size: 1.3rem;
+    color: rgb(8, 0, 255);
+    margin-bottom: 3rem;
+}
+
+#forgot {
     margin-top: 2rem;
+    color: blue;
+    font-weight: 500;
 }
 
-@media (max-width: 767px) {
-    .logincontainer {
-        background-image: none;
+.spinner {
+    border: 4px solid #f3f3f3;
+    border-top: 4px solid #3498db;
+    border-radius: 50%;
+    margin-left: 45%;
+    width: 20px;
+    height: 20px;
+    animation: spin 1s linear infinite;
+  }
+
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
+@media(max-width: 768px){
+    .logincontainer{
+        max-width: 70%;
     }
-
-    .logincontainer img {
-        display: none;
+    .logincontainer h1{
+        font-size: 2.5rem;
     }
-
-    .formlogin {
-        margin-left: 1rem;
-        width: 75%;
-        border-radius: 1rem;
-        margin-top: 1rem;
-
+    #slogan{
+        margin-bottom: 1rem;
     }
-
-    .formlogin h1 {
-        width: 100%;
-        font-size: 3rem;
-    }
-
-    .formlogin input {
-        padding: 1rem;
-    }
-
-    #forgot {
-        margin-left: 2.6rem;
-    }
-
-    .formlogin input::placeholder {
-        font-size: 1.3rem;
-    }
-}
-
-@media (width: 430px) {
-    #forgot {
-        margin-left: 3.5rem;
-    }
-
-    .formlogin {
-        margin-left: 1.3rem;
-    }
-}
-
-@media(min-width: 768px) and (max-width: 991px) {
-    .logincontainer {
-        background-image: none;
-    }
-
-    .logincontainer img {
-        display: none;
-    }
-
-    .formlogin {
-        margin-left: 10rem;
-        width: 50%;
-        border-radius: 1rem;
-        margin-top: 1rem;
-
-    }
-
-    .formlogin h1 {
-        width: 100%;
-        font-size: 3rem;
-    }
-
-    .formlogin input {
-        padding: 1rem;
-    }
-
-    #forgot {
-        margin-left: 5rem;
-    }
-
-    .formlogin input::placeholder {
-        font-size: 1.3rem;
-    }
-}
-
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-    .logincontainer {
-        background-image: none;
-    }
-
-    .logincontainer img {
-        display: none;
-    }
-
-    .formlogin {
-        margin-left: 15rem;
-        width: 50%;
-        border-radius: 1rem;
-        margin-top: 1rem;
-        margin-bottom: 35rem;
-    }
-
-    .formlogin h1 {
-        width: 100%;
-        font-size: 3rem;
-    }
-
-    .formlogin input {
-        padding: 1rem;
-    }
-
-    #forgot {
-        margin-left: 9rem;
-    }
-
-    .formlogin input::placeholder {
-        font-size: 1.3rem;
-    }
-}
-
-
-
-@media only screen and (min-width: 1200px) and (max-width: 1700px){
-    .formlogin{
-        margin-bottom: 2.7rem;
-    }
-
-    .logincontainer img{
-        width: 50%;
-        height: 50%;
-        margin-left: 1rem
-    };
 }
