--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -2,6 +2,7 @@
     font-family: 'Lato';
     box-sizing: border-box;
     flex-direction: column;
+
 }
 
 .containergeneral {
@@ -42,7 +43,7 @@
     margin-bottom: 1rem;
     border-radius: 10px;
     border: solid 1px rgb(232, 232, 232);
-    background-color: rgba(243, 247, 253, 0.597);
+    background-color: rgba(255, 255, 255, 0.597);
     color: rgb(112, 112, 112);
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 
@@ -72,11 +73,12 @@
     border-radius: 0.4rem;
     margin-top: 2rem;
     cursor: pointer;
+    width: 80%;
 }
 
 .afiliar {
     margin-top: 1rem;
-    background-color: rgb(71, 71, 253);
+    background-color: rgba(0, 0, 255, 0.619);
     width: fit-content;
     padding: 0.5rem;
     color: white;
@@ -127,21 +129,43 @@
     width: 20px;
     height: 20px;
     animation: spin 1s linear infinite;
-  }
+}
 
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
 
-@media(max-width: 768px){
-    .logincontainer{
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@media(max-width: 768px) {
+    .logincontainer {
         max-width: 70%;
     }
-    .logincontainer h1{
+
+    .logincontainer h1 {
         font-size: 2.5rem;
     }
-    #slogan{
+
+    #slogan {
         margin-bottom: 1rem;
     }
+}
+
+@media(min-width: 1200px) {
+    .logincontainer {
+        font-family: 'Lato';
+        box-sizing: border-box;
+        flex-direction: column;
+        border: solid 2px;
+        padding: 4rem;
+        border-radius: 0.5rem;
+        border-color: rgb(223, 223, 223);
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        padding-bottom: 0;
+    }
+  
 }
