--- a/src/styles/ModalProfile4.css
+++ b/src/styles/ModalProfile4.css
@@ -3,7 +3,7 @@
     flex: 1;
 }
 
-.errorbenef{
+.errorbenef {
     font-size: 1rem;
     font-weight: 700;
     margin-top: 5rem;
@@ -24,28 +24,29 @@
     padding: .5rem 0 .5rem 0;
     padding-left: 1rem;
 }
+
 #scrolleable4 {
     overflow-y: auto;
     overflow-x: hidden;
-  }
-  
-  #scrolleable4::-webkit-scrollbar {
-    width: 5px; 
-  }
-  
-  #scrolleable4::-webkit-scrollbar-thumb {
-    background-color: #3498db; 
-    border-radius: 5px; 
-  }
-  
-  #scrolleable4::-webkit-scrollbar-track {
-    background-color: #f1f1f1; 
-  }
-  
-  #scrolleable4::-webkit-scrollbar-button {
+}
+
+#scrolleable4::-webkit-scrollbar {
+    width: 5px;
+}
+
+#scrolleable4::-webkit-scrollbar-thumb {
+    background-color: #3498db;
+    border-radius: 5px;
+}
+
+#scrolleable4::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+}
+
+#scrolleable4::-webkit-scrollbar-button {
     display: none;
-  }
-  
+}
+
 
 .continuar5 button {
     background: none;
@@ -160,9 +161,37 @@
     margin-left: 0;
 }
 
+#btn-editar {
+    font-size: 1rem;
+    margin-left: 1rem;
+    background-color: #005f9e;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+}
+
+.optns{
+    display: flex;
+    height: auto;
+}
+
 
 
 @media (max-width : 767px) {
+
+    .optns{
+        gap: 1rem;
+        justify-content: center;
+        align-items: center;
+    }
+
+
+    #btn-editar {
+        margin-left: 0;
+        font-size: 1.4rem;
+    }
+
+
     #scrolleable4 {
         padding-left: 2rem;
         overflow-y: scroll;
@@ -195,13 +224,16 @@
     .continuar5 {
         margin-left: 0;
     }
-    .box{
+
+    .box {
         flex-direction: column;
     }
-    #cruz{
+
+    #cruz {
         margin: 0;
-        margin-bottom: 1rem;
+        height: 50%;
     }
+
 }
 
 @media (min-width: 768px) and (max-width: 990px) {
@@ -233,7 +265,9 @@
         margin-bottom: 0;
     }
 
-    
+
+
+
 
 }
 
